<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/px_72"
        android:textColor="@color/colorSelectedText"
        android:layout_marginStart="@dimen/px_53"
        android:layout_marginTop="@dimen/px_244"
        android:text="@string/title_login" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="@dimen/px_971"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_56"
        android:layout_marginTop="@dimen/px_475"
        android:hint="@string/hint_phone_or_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorTextColorHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/px_40"
        android:maxLength="48"
        android:lines="1"
        android:background="@color/colorWhite"/>

    <View
        android:layout_width="@dimen/px_971"
        android:layout_height="@dimen/px_1"
        android:layout_marginStart="@dimen/px_53"
        android:layout_marginTop="@dimen/px_565"
        android:background="@color/colorUnderLine"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="@dimen/px_801"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_56"
        android:layout_marginTop="@dimen/px_641"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextColorHint"
        android:textColor="@color/colorText"
        android:textSize="@dimen/px_40"
        android:maxLength="40"
        android:lines="1"
        android:background="@color/colorWhite"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/px_58"
        android:layout_marginTop="@dimen/px_644"
        android:textSize="@dimen/px_32"
        android:textColor="@color/colorTextColorHint"
        android:text="@string/hint_forget_password" />

    <View
        android:layout_width="@dimen/px_971"
        android:layout_height="@dimen/px_1"
        android:layout_marginStart="@dimen/px_53"
        android:layout_marginTop="@dimen/px_730"
        android:background="@color/colorUnderLine"/>

    <Button
        android:id="@+id/buttonLoginByPassword"
        android:layout_width="@dimen/px_971"
        android:layout_height="@dimen/px_127"
        android:layout_marginStart="@dimen/px_53"
        android:layout_marginTop="@dimen/px_840"
        android:text="@string/btm_login"
        android:textSize="@dimen/px_42"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_btm_border_radius"
        style="?android:attr/borderlessButtonStyle" />

    <TextView
        android:id="@+id/textViewRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_55"
        android:layout_marginTop="@dimen/px_1004"
        android:textSize="@dimen/px_32"
        android:textColor="@color/colorTextColorHint"
        android:text="@string/btm_registered" />

    <TextView
        android:id="@+id/textViewVerificationCodeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/px_58"
        android:layout_marginTop="@dimen/px_1004"
        android:textSize="@dimen/px_32"
        android:textColor="@color/colorTextColorHint"
        android:text="@string/btm_login_by_vc_code" />


</RelativeLayout>