<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <View
        android:layout_width="@dimen/px_2"
        android:layout_height="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_17"
        android:background="@color/colorSubtitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfocused_time"
        android:textColor="@color/colorSubtitle"
        android:textSize="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_25"/>

    <View
        android:layout_width="@dimen/px_2"
        android:layout_height="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_291"
        android:background="@color/colorSubtitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorSubtitle"
        android:textSize="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_299"/>

    <View
        android:layout_width="@dimen/px_2"
        android:layout_height="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_478"
        android:background="@color/colorSubtitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name"
        android:textColor="@color/colorSubtitle"
        android:textSize="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_486"/>

    <View
        android:layout_width="@dimen/px_2"
        android:layout_height="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_787"
        android:background="@color/colorSubtitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textColor="@color/colorSubtitle"
        android:textSize="@dimen/px_40"
        android:layout_marginTop="@dimen/px_42"
        android:layout_marginStart="@dimen/px_795"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/unfocusedDetailStudentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px_24"
        android:layout_marginTop="@dimen/px_115">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>